<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.package_activity.ChoosePackageActivity">

    <com.solidict.poc.ui.widgets.CustomTopBar
        android:id="@+id/TopbarChoosePackage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:paddingBottom="20dp"
        app:arcHeight="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_first_step"

                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/selected_step"
                android:gravity="center_vertical"
                android:orientation="horizontal"

                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="32dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_first"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/choose_package"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/unselected_step"

                android:gravity="center"
                android:text="@string/step_Second"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/unselected_step"

                android:gravity="center"
                android:text="@string/step_third"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/unselected_step"

                android:gravity="center"
                android:text="@string/step_fourth"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/unselected_step"

                android:gravity="center"
                android:text="@string/step_fifth"
                android:textColor="@color/black" />
        </LinearLayout>
    </com.solidict.poc.ui.widgets.CustomTopBar>


    <TextView
        android:id="@+id/tv_package_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/package_title"

        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopbarChoosePackage" />

    <TextView
        android:id="@+id/tv_package_description"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/package_description"
        android:textColor="@color/gray"

        app:layout_constraintEnd_toEndOf="@+id/rv_packages"
        app:layout_constraintStart_toStartOf="@+id/rv_packages"
        app:layout_constraintTop_toBottomOf="@+id/tv_package_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_packages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_package_description"
        tools:listitem="@layout/packages_list_item" />


</androidx.constraintlayout.widget.ConstraintLayout>